[package]
name = "state-sync"
authors.workspace = true
edition.workspace = true
repository.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
anyhow = { workspace = true }
tokio-retry = "0.3.0"
async-trait = { workspace = true }
reqwest = { workspace = true, features = ["json"]}
primitive-types = { workspace = true }
blockifier = { workspace = true, default-features = true }
starknet_api = { workspace = true }
mp-hashers = { workspace = true, default-features = true }
mp-commitments = { workspace = true, default-features = true }
serde_json = { workspace = true, features = [
    "arbitrary_precision",
    "raw_value",
] }
hex = { workspace = true }
tracing = { workspace = true }
const-decoder = "0.3.0"
keccak-hash = "0.10.0"
ethereum-types = "0.14.1"

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "test-util"] }
const-decoder = "0.3.0"
httpmock = "0.7.0-rc.1"
